replace build result DTO classes with records